fix: z-index transition

--- a/Projeto-aprenser/styles/output.css
+++ b/Projeto-aprenser/styles/output.css
@@ -570,6 +570,10 @@ video {
   z-index: -10;
 }
 
+.z-20 {
+  z-index: 20;
+}
+
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
@@ -943,6 +947,10 @@ video {
 
 .hover\:-z-10:hover {
   z-index: -10;
+}
+
+.hover\:z-10:hover {
+  z-index: 10;
 }
 
 .hover\:scale-105:hover {
